--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@ STYLE_SETTINGS_CSS=
 STYLE_SETTINGS_BODY_CLASSES=
 USE_FULL_RESOLUTION_IMAGES=false
 dgHomeLink=true
-dgPassFrontmatter=false
+dgPassFrontmatter=true
 dgShowBacklinks=false
 dgShowLocalGraph=false
 dgShowInlineTitle=true
